--- a/TeamMaker/Estilos/Style.css
+++ b/TeamMaker/Estilos/Style.css
@@ -313,6 +313,67 @@ input.inputGrVolver{
     background-color: #a7fabe;
 }
 
+body.listarBody{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 200px 100% 20%;
+    overflow: visible;
+}
+
+div.listTodo{
+    background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
+    text-align: center;
+    padding-top: 5%;
+    padding-bottom: 0;
+    height: 100%;
+}
+
+table{
+    align-self: center;
+    text-align: center;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
+    height: 10%;
+    border-spacing: 0;
+    border: solid 1px rgb(24,24,24);
+}
+
+thead{
+    font-weight: bold;
+    font-size: 200%;
+}
+
+tr{
+    border: solid 1px rgb(24,24,24);
+}
+
+td{
+    border: solid 1px rgb(24,24,24);
+}
+
+
+input.buttonList{
+    height: 35px;
+    width: 35px;
+    border-radius: 0%;
+    align-items: center;
+    text-align: center;
+    align-self: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+input.volverListUs{
+    height: 4%;
+    width: 10%;
+    margin-top: 10%;
+}
+
+footer.listFoot{
+    height: 150px;
+}
+
 @media only screen and (min-width: 200px) and (max-width: 577px){
 
     *{
