--- a/TeamMaker/Estilos/Style.css
+++ b/TeamMaker/Estilos/Style.css
@@ -630,6 +630,146 @@ main.mainEditC {
     padding-top: 3%;
 }
 
+.menuAdmin ul {
+    list-style:none;
+    margin:0;
+    padding:0;
+}
+   
+   /* items del menu */
+   
+.menuAdmin ul li {
+    background-color: white;
+}
+   
+   /* enlaces del menu */
+   
+.menuAdmin ul a {
+    display:block;
+    color: black;
+    text-decoration:none;
+    font-weight:400;
+    font-size:15px;
+    padding:10px;
+    font-family:"HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform:uppercase;
+    letter-spacing:1px;
+}
+   
+   /* items del menu */
+   
+.menuAdmin ul li {
+    position:relative;
+    display: inline-block;
+    margin:0;
+    padding:0;
+}
+   
+   /* efecto al pasar el ratón por los items del menu */
+   
+.menuAdmin ul li:hover {
+    background:#5b78a7;
+}
+
+.menuAdmin ul ul {
+    display:none;
+    position:absolute;
+    top:100%;
+    left:0;
+    background:#eee;
+    padding:0;
+   }
+   
+   /* items del menu desplegable */
+   
+   .menuAdmin ul ul li {
+    float:none;
+    width:150px
+   }
+   
+   /* enlaces de los items del menu desplegable */
+   
+   .menuAdmin ul ul a {
+    line-height:120%;
+    padding:10px 15px;
+   }
+   
+   /* items del menu desplegable al pasar el ratón */
+   
+   .menuAdmin ul li:hover > ul {
+    display:block;
+   }
+
+.menuAdminTop ul {
+    list-style:none;
+    margin:0;
+    padding:0;
+}
+   
+   /* items del menu */
+   
+.menuAdminTop ul li {
+    background-color:white;
+}
+   
+   /* enlaces del menu */
+   
+.menuAdminTop ul a {
+    display:block;
+    color: black;
+    text-decoration:none;
+    font-weight:400;
+    font-size:15px;
+    padding:10px;
+    font-family:"HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform:uppercase;
+    letter-spacing:1px;
+}
+   
+   /* items del menu */
+   
+.menuAdminTop ul li {
+    position:relative;
+    display: inline-block;
+    margin:0;
+    padding:0;
+}
+   
+   /* efecto al pasar el ratón por los items del menu */
+   
+.menuAdminTop ul li:hover {
+    background:#5b78a7;
+}
+
+.menuAdminTop ul ul {
+    display:none;
+    position:absolute;
+    top:100%;
+    left:0;
+    background:#eee;
+    padding:0;
+   }
+   
+   /* items del menu desplegable */
+   
+   .menuAdminTop ul ul li {
+    float:none;
+    width:150px
+   }
+   
+   /* enlaces de los items del menu desplegable */
+   
+   .menuAdminTop ul ul a {
+    line-height:120%;
+    padding:10px 15px;
+   }
+   
+   /* items del menu desplegable al pasar el ratón */
+   
+   .menuAdminTop ul li:hover > ul {
+    display:block;
+   }
+
 @media only screen and (min-width: 200px) and (max-width: 577px) {
 
     /*
